@startuml

title __GENETIC's Class Diagram__\n

  package com.m2i.poe {
      package com.m2i.poe.genetic {
        class DNARepository {
            + load(String uri)
            + getBaseList() : List<Base>
        }
      }
    }

  package com.m2i.poe {
    package com.m2i.poe.genetic {
      class RNA {
          - strand :     List<Base>
          + RNA()
      }
    }
  }

  package com.m2i.poe {
      package com.m2i.poe.genetic {
        class Ribosome {
            + translate(ARN arn) : List<AminoAcid>
        }
      }
    }


  package com.m2i.poe {
    package com.m2i.poe.genetic {
      class AminoAcid {
          - symbol : String
          - trigram : String
          - name : String
          + AminoAcid()
          + getSymbol()
          + getTrigram()
          + getName()
          + toString()
      }
    }
  }

  package com.m2i.poe {
      package com.m2i.poe.genetic {
        class Protein {
            - chain : List<AminoAcid>
            + {static} factory(aminoAcidList : List<AminoAcid>) : List<Protein>
        }
      }
    }


  package com.m2i.poe {
    package com.m2i.poe.genetic {
      class Base {
          - symbol : String
          - name : String
          - familly : String
          + Base(String symbol)
          + getApparie() : Base
      }
    }
  }


  package com.m2i.poe {
    package com.m2i.poe.genetic {
      class DNA {
          - strand : List<Base>
          + DNA(String code)
          + DNA()
          + getComplementary() : List<Base>
          + transcription() : RNA
      }
    }
  }

  Base o--> "1" Base : apparie
  DNA o--> "*" Base : strand
  DNA o--> "1" RNA : transcription
  RNA o--> "*" AminoAcid : translation
  Protein o--> "*" AminoAcid : chain
  Ribosome o--> "1" RNA
  Ribosome o--> "*" AminoAcid




right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml